pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-invalid-selector.ub
factory: {
  state-moves: [
    { from: 'core@resource.old', to: 'resource.new' }
  ]
}
